Mon Dec 25 16:19:42 UTC 2006  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * Merry Christmas everyone!!!
  
Sun Dec 24 23:22:41 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * tests/Nested_Upcall_Crash/Nested_Upcall_Crash.mpc:
        * tests/Portable_Interceptors/Service_Context_Manipulation/PI_Svc_Context_Manip.mpc:

          Adding "after" keyword to makesure IDL is built first in
          parallel builds.

Sun Dec 24 15:44:40 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * tests/TransportCurrent/Framework/Server_Request_Interceptor.h:
        * tests/TransportCurrent/Framework/Server_Request_Interceptor.cpp:
        * tests/TransportCurrent/IIOP/IIOP_Server_Request_Interceptor.h:

          Getting the const-ness right.

Sun Dec 24 15:39:43 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * tests/Parallel_Connect_Strategy/Makefile.am:
        * tests/Reliable_Oneways/Makefile.am:

          Regenerated.

        * tests/Parallel_Connect_Strategy/Parallel_Connect_Strategy.mpc:
        * tests/Reliable_Oneways/Reliable_Oneways.mpc:

          Split out IDL compilation into separate MPC project.

Sun Dec 24 15:38:15 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * tests/Smart_Proxies/Collocation/Makefile.am:

          Regenerated.

        * tests/Smart_Proxies/Collocation/SP_Collocation.mpc:

          Changed IDL project to inherit from smart_proxies.

          Changed *Test project to depend on *idl for build order.

Sun Dec 24 00:04:19 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * tests/CollocationLockup/Makefile.am:
        * tests/DSI_Gateway/Makefile.am:
        * tests/Nested_Upcall_Crash/Makefile.am:

          Regenerated.

        * tests/CollocationLockup/CollocationLockup.mpc:
        * tests/DSI_Gateway/DSI_Gateway.mpc:
        * tests/Nested_Upcall_Crash/Nested_Upcall_Crash.mpc:

          Split out IDL compilation into separate MPC project.
